--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -28,18 +28,21 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: null
-  cloud_firestore: null
+  charts_flutter: ^0.12.0
+  cloud_firestore: ^3.1.15
   cupertino_icons: ^1.0.2
   emoji_alert: ^1.1.0
   equatable: null
   firebase_auth: null
   firebase_core: null
+  firebase_storage: ^10.2.16
   flutter:
     sdk: flutter
   flutter_bloc: null
   flutter_svg: ^1.0.3
   fluttertoast: null
   get: null
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -50,7 +53,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
