--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // THIS ADDED 
-    implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    // implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0'
     
 }
