--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get: null
   image_picker: ^0.8.5+3
   intl: ^0.17.0
+  pay: ^1.0.10
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -65,6 +66,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/profile_image/
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
